 - #13 impl job details screen
 - #11 impl job screen
 - reliability ratio
 - upvotes and downvotes
 - forms foundation
 - sync with API
 - added context to store token
 - wiki foundations
 - full login flow
 - navigation improvement
 - dotenv setup
 - added navigation
 - linter setup
 - expo init hydra-front : empty template