@@ -1,3 +1,4 @@
+ - #13 display job closing date, job details screen
  - #13 impl job details screen
  - #11 impl job screen
  - reliability ratio
